--- a/app/src/main/res/layout/rounded_card.xml
+++ b/app/src/main/res/layout/rounded_card.xml
@@ -17,4 +17,14 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"/>
 
+    <ImageView
+            android:id="@+id/imgCard"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            tools:src="@color/colorPrimary"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"/>
+
 </android.support.constraint.ConstraintLayout>
