--- a/app/src/main/res/layout/rounded_card.xml
+++ b/app/src/main/res/layout/rounded_card.xml
@@ -10,11 +10,33 @@
             android:id="@+id/tvCardTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text="Some medium title"
+            tools:text="Some medium title Some medium title Some medium title "
             android:textSize="15sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/imgCard"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"/>
+
+    <TextView
+            android:id="@+id/tvCardSubtitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif-black"
+            tools:text="Subtitle"
+            app:layout_constraintLeft_toLeftOf="@+id/tvCardTitle"
+            app:layout_constraintTop_toBottomOf="@+id/tvCardTitle"
+            app:layout_constraintRight_toLeftOf="@+id/imgCard"
+            android:layout_marginTop="8dp"/>
+
+    <Button
+            android:id="@+id/btnCard"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            tools:text="Button"
+            app:layout_constraintLeft_toLeftOf="@+id/tvCardTitle"
+            app:layout_constraintTop_toBottomOf="@+id/barrier"
             android:layout_marginTop="8dp"/>
 
     <ImageView
@@ -25,6 +47,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp"/>
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="8dp"/>
+
+    <android.support.constraint.Barrier
+            android:id="@+id/barrier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="imgCard,tvCardSubtitle"/>
 
 </android.support.constraint.ConstraintLayout>
